Fixing spacing on headings

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -18,7 +18,7 @@ h6 {
     font-weight: $heading-font-weight;
     letter-spacing: $heading-letter-spacing;
     line-height: $heading-line-height;
-    margin-top: $small-spacing * 1.5;
+    margin-top: $small-spacing;
     margin-bottom: $small-spacing;
     text-transform: uppercase;
 }
